--- a/package.json
+++ b/package.json
@@ -1,19 +1,26 @@
 {
-  "name": "name-of-app",
+  "name": "healthy-food",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.19",
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
+    "axios": "^0.24.0",
+    "formik": "^2.2.9",
+    "graceful-fs": "^4.2.9",
+    "history": "^5.2.0",
+    "node-fetch": "^3.1.0",
     "react": "^17.0.2",
+    "react-alice-carousel": "^2.5.1",
     "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
-    "typescript": "^4.5.4",
+    "react-icons": "^4.3.1",
+    "react-input-mask": "^2.0.4",
+    "react-router-dom": "^6.0.0-beta.8",
+    "react-scripts": "^5.0.0",
+    "react-slick": "^0.28.1",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -39,5 +46,29 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@babel/core": "^7.16.10",
+    "@babel/preset-react": "^7.16.7",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-input-mask": "^3.0.1",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/react-slick": "^0.23.8",
+    "@types/styled-components": "^5.1.19",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.5.4",
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
+  },
+  "description": "In the project directory, you can run:",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
