--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.0.0-beta.8",
     "react-scripts": "^5.0.0",
     "react-slick": "^0.28.1",
+    "source-map-url": "^0.4.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.3"
   },
